--- a/index.html
+++ b/index.html
@@ -9,18 +9,20 @@
 </head>
 <body>
     <!-- Navigation -->
-    <nav>
-        <img src="images/logo.png" alt="">
-        <div class="navigation">
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a class="btn" href="#">Login</a></li>
-            </ul>
-        </div>
-    </nav>
+    <div class="nav-cont">
+        <nav>
+            <img src="images/logo.png" alt="">
+            <div class="navigation">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a class="btn" href="#">Login</a></li>
+                </ul>
+            </div>
+        </nav>
+    </div>
 
     <!-- Carousel -->
     <section id="carousel"></section>
@@ -107,7 +109,7 @@
     </section>
 
     <section id="testimonial">
-        
+        <h1>What Our Students Say</h1>
     </section>
 
 
