--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@
         <div class="wrapper">
             <div class="left">
                 <h1>Welcome to Intercontinental School Kano</h1>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea molestiae distinctio velit voluptate atque reiciendis, totam repellat labore sed ut libero nostrum dicta unde incidunt delectus ipsa necessitatibus! Perferendis itaque natus ratione esse a aspernatur eaque quo excepturi ipsum impedit omnis aut, assumenda exercitationem nostrum eveniet amet sequi ea harum?</p>
+                <p>It is with the greatest delight to welcome you and your ward to Intercontinental Schools, an institution that is
+                     synonymous with EXCELLENCE nationwide. My great love for children and God’s benevolence brought about the establishment of 
+                     Intercontinental Schools in 1997. Intercontinental Schools is proud of a team of hardworking, well-dedicated, and highly skilled staff 
+                     whose desire is to provide children with an all-embracing basic education capable of molding them into some of the best human resources 
+                     for our dear nation.</p>
                 <a href="#" class="btn">Learn More</a>
             </div>
 
