--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
             </div>
             <div class="item">
                 <h3 class="excess">Darun-Noor</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas quibusdam optio recusandae, qui repudiandae vero autem similique aliquam inventore, modi, mollitia illo corrupti earum odio! Consequuntur, modi ad officia atque, harum fugit explicabo nostrum, odit recusandae esse rerum similique. Vero ex sint quae officia provident commodi excepturi sit ratione itaque!</p>
+                <p>We leverage the Islamic Method of teaching such as recitation of the Holy Quran, memorization of the Holy Quran, and Arabic language skills.</p>
                 <a href="#">Read More</a>
             </div>
             <div class="item">
                 <h3>Conventional</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas quibusdam optio recusandae, qui repudiandae vero autem similique aliquam inventore, modi, mollitia illo corrupti earum odio! Consequuntur, modi ad officia atque, harum fugit explicabo nostrum, odit recusandae esse rerum similique. Vero ex sint quae officia provident commodi excepturi sit ratione itaque!</p>
+                <p>We leverage the Islamic Method of teaching such as recitation of the Holy Quran, memorization of the Holy Quran, and Arabic language skills.</p>
                 <a href="#">Read More</a>
             </div>
             <div class="item">
@@ -81,32 +81,41 @@
                 <article>
                     <div><img src="images/islam.png" alt=""></div>
                     <h4>Islamic Teaching</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, amet!</p>
+                    <p>Islamic Studies is an essential part of growing up in a western cultural environment. Children generally assimilate into their
+                         environment rapidly often in a generation if unchecked can lose their culture, religion, and identity.</p>
                 </article>
                 <article>
                     <div><img src="images/qurancomp.png" alt=""></div>
                     <h4>Quran Competition</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, amet!</p>
+                    <p>Quran recitation brings many rewards and blessings from Allah (SWT). Muslims will earn great rewards for reciting the Quran and 
+                        implementing it in their daily life routine. In Hadith Prophet Muhammad (SAW) stated that: "Whoever recites ten Ayahs (verses) in Qiyaam 
+                        will not be recorded as one of the forgetful.</p>
                 </article>
                 <article>
                     <div><img src="images/debate.png" alt=""></div>
                     <h4>Debate</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, amet!</p>
+                    <p>Debate Participation promotes problem-solving and innovative thinking, and helps students to build links between words and ideas 
+                        that make concepts more meaningful and in practice to develop the art of public speaking and rhetoric.</p>
                 </article>
                 <article>
                     <div><img src="images/spelling.png" alt=""></div>
                     <h4>Spelling Bee</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, amet!</p>
+                    <p>The benefits of spelling bees extend beyond language: Since children are required to spell words while on stage, kids also 
+                        develop self-confidence, communication and public speaking skills, and the ability to thrive under pressure..</p>
                 </article>
                 <article>
                     <div><img src="images/stem.png" alt=""></div>
                     <h4>STEM</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, amet!</p>
+                    <p>STEM is important because it teaches critical thinking skills and instills a passion for innovation. 
+                        Beyond the benefit of learning science, technology, engineering, and math, STEM assists in the
+                         problem-solving and exploratory learning that fuel success across a variety of tasks and disciplines..</p>
                 </article>
                 <article>
                     <div><img src="images/competition.png" alt=""></div>
                     <h4>Chess & Scrabble</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, amet!</p>
+                    <p>Chess is an educational tool that develops creativity builds confidence develops problem-solving skills exercises the brain.
+                         Chess helps you to remain calm under pressure while Scrabble helps develop 
+                        your intellectual abilities. Scrabble teaches you strategy and encourages social cooperation and bonding..</p>
                 </article>
             </div>
         </div>
