--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Intercontinental School Kano</title>
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon (2).ico">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 <body>
     <!-- Navigation -->
@@ -121,8 +124,9 @@
         </div>
     </section>
 
-    <section id="testimonial">
-        <h1>What Our Students Say</h1>
+    <section id="curriculum">
+        <h1>Our Curriculum</h1>
+
     </section>
 
 
