--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="wrapper">
             <div class="left">
                 <h1>Our Activities</h1>
-                <p>We have a range of fun-filled activities lined up every term, we ensure that these activities broaden the scope of our student's learning and at the same time improve their interpersonal & intellectual skills.</p>
+                <p>We have a range of fun-filled activities lined up every term, we ensure that <br>these activities broaden the scope of our student's learning and at <br>the same time improve their interpersonal & intellectual skills.</p>
             </div>
             <div class="right">
                 <article>
@@ -221,7 +221,7 @@
                         <img src="images/abacus.png" alt="">
                     </div>
                     <div class="content">
-                        <h3>Chess</h3>
+                        <h3>Public Speaking</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora et excepturi eaque voluptate enim, facere libero cum distinctio sapiente repellat!</p>
                     </div>
                     
@@ -235,6 +235,7 @@
         </div>
 
     </section>
+
 
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
     <script src="main.js"></script>
