--- a/index.html
+++ b/index.html
@@ -81,39 +81,39 @@
                 <p>We have a range of fun-filled activities lined up every term, we ensure that <br>these activities broaden the scope of our student's learning and at <br>the same time improve their interpersonal & intellectual skills.</p>
             </div>
             <div class="right">
-                <article>
+                <article class="article hidden">
                     <div><img src="images/islam.png" alt=""></div>
                     <h4>Islamic Teaching</h4>
                     <p>Islamic Studies is an essential part of growing up in a western cultural environment. Children generally assimilate into their
                          environment rapidly often in a generation if unchecked can lose their culture, religion, and identity.</p>
                 </article>
-                <article>
+                <article class="article hidden">
                     <div><img src="images/qurancomp.png" alt=""></div>
                     <h4>Quran Competition</h4>
                     <p>Quran recitation brings many rewards and blessings from Allah (SWT). Muslims will earn great rewards for reciting the Quran and 
                         implementing it in their daily life routine. In Hadith Prophet Muhammad (SAW) stated that: "Whoever recites ten Ayahs (verses) in Qiyaam 
                         will not be recorded as one of the forgetful.</p>
                 </article>
-                <article>
+                <article class="article hidden">
                     <div><img src="images/debate.png" alt=""></div>
                     <h4>Debate</h4>
                     <p>Debate Participation promotes problem-solving and innovative thinking, and helps students to build links between words and ideas 
                         that make concepts more meaningful and in practice to develop the art of public speaking and rhetoric.</p>
                 </article>
-                <article>
+                <article class="article hidden">
                     <div><img src="images/spelling.png" alt=""></div>
                     <h4>Spelling Bee</h4>
                     <p>The benefits of spelling bees extend beyond language: Since children are required to spell words while on stage, kids also 
                         develop self-confidence, communication and public speaking skills, and the ability to thrive under pressure..</p>
                 </article>
-                <article>
+                <article class="article hidden">
                     <div><img src="images/stem.png" alt=""></div>
                     <h4>STEM</h4>
                     <p>STEM is important because it teaches critical thinking skills and instills a passion for innovation. 
                         Beyond the benefit of learning science, technology, engineering, and math, STEM assists in the
                          problem-solving and exploratory learning that fuel success across a variety of tasks and disciplines..</p>
                 </article>
-                <article>
+                <article class="article hidden">
                     <div><img src="images/competition.png" alt=""></div>
                     <h4>Chess & Scrabble</h4>
                     <p>Chess is an educational tool that develops creativity builds confidence develops problem-solving skills exercises the brain.
@@ -235,6 +235,7 @@
         </div>
 
     </section>
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
