Statistics, Testimonials, Partners & Footer

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"/>
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon (2).ico">
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 
 </head>
 <body>
@@ -236,6 +236,148 @@
 
     </section>
 
+
+<!-- Statistics -->
+    <section id="statistics">
+        <div class="wrapper">
+            <div class="card">
+                <div class="item item--1">
+                    <img src="images/counter_icon1.png" alt="">
+                  <span class="quantity" data-val="10532"> 90+ </span>
+                  <span class="text text--1"> Satisfied Students </span>
+                </div>
+                <div class="item item--2">
+                  <img src="images/counter_icon2.png" alt="">
+                  <span class="quantity" data-val="7984"> 70+ </span>
+                  <span class="text text--2"> Courses Completed </span>
+                </div>
+                <div class="item item--3">
+                  <img src="images/counter_icon3.png" alt="">
+                  <span class="quantity" data-val="5382"> 150+ </span>
+                  <span class="text text--3"> Award Recieved </span>
+                </div>
+                <div class="item item--4">
+                  <img src="images/counter_icon4.png" alt="">
+                  <span class="quantity" data-val="1354"> 30+ </span>
+                  <span class="text text--4"> Expert Advisors </span>
+                </div>
+              </div>
+
+        </div>
+    </section>
+
+    <!-- Testimonials -->
+    <section id="testimonials">
+        <div class="wrapper">
+            <h1>What Our Students Say</h1>
+            <div class="left">
+                <div class="card card1">
+                    <small>Wednesday 31st of August 2022 by 11:20am</small>
+                    <div class="profile">
+                        <div class="image">
+                            <img src="images/logo.png" alt="">
+                        </div>
+                        <div class="info">
+                            <h6>Ababakar Ibrahim</h6>
+                            <p>"Thank you for teaching us to read, to write, and comprehend, thank you for teaching us not to be afraid of a math problem, teaching us to “think” and solve problems on our own, for teaching us to advocate for ourselves, for teaching us how to be a friend. Thank you Intercontinental School Kano".
+                                
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card card2">
+                    <small>Thursday 22nd of May 2021 by 01:00pm</small>
+                    <div class="profile">
+                        <div class="image">
+                            <img src="images/logo.png" alt="">
+                        </div>
+                        <div class="info">
+                            <h6>Khadijah Bukar Kolo</h6>
+                            <p>“Intercontinental School not only focuses on improving areas of need but also really puts a huge emphasis on bolstering individual strengths. I have grown in a way that I never would have at another school due to this excellent individualized and warm environment. I am so pleased.”</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card card3">
+                    <small>Monday 19th of Jan 2021 by 12:00pm</small>
+                    <div class="profile">
+                        <div class="image">
+                            <img src="images/logo.png" alt="">
+                        </div>
+                        <div class="info">
+                            <h6>Marquita Brown</h6>
+                            <p>"Intercontinental schools kano gave me the opportunity and leverage to be better in my academics"</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card card4">
+                    <small>Friday 2nd of September 2020 by 01:00pm</small>
+                    <div class="profile">
+                        <div class="image">
+                            <img src="images/logo.png" alt="">
+                        </div>
+                        <div class="info">
+                            <h6>Maryam Abacha</h6>
+                            <p>Intercontinental schools kano is a place where pupils/students are nurtured to become the best among equals.”</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- Partners -->
+    <section id="partners">
+        <div class="wrapper">
+            <img src="images/brand11.png" alt="">
+            <img src="images/psat.png" alt="">
+        </div>
+    </section>
+
+
+    <!-- Footer -->
+    <section id="footer">
+        <div class="wrapper">
+            <div class="item one">
+                <div class="school">
+                    <img src="images/logo.png" alt="">
+                    <p>Intercontinental Schools is truly an extraordinary place of learning. s Our talented staff provides each student with a rigorous standards, high academic and behavioral expectation, equity and a solid foundation.</p>
+                </div>
+                
+            </div>
+            <div class="item two">
+                <h3>Opening Hour</h3>
+                <p>Mon - Fri : 7:30 am - 05:00 pm</p>
+                <p>Sat 10:00 am - 01:00 pm</p>
+            </div>
+            <div class="item three">
+                <h3>Contact Us</h3>
+                <div class="icon">
+                    <i class="fa-sharp fa-solid fa-phone"></i>
+                    <p>+23480622126404</p>
+                </div>
+                <div class="icon">
+                    <i class="fa-regular fa-envelope"></i>
+                    <p>intercontinentalschools@gmail.com</p>
+                </div>
+                <div class="icon">
+                    <i class="fa-solid fa-location-dot"></i>
+                    <p>1A Intercontinental Street, Farm Center, Tarauni LGA, Kano State, NG</p>
+                </div>
+            </div>
+            <div class="item four">
+                <h3>Follow Us</h3>
+                <div class="socials">
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
